# stereo

./: .gitignore  CMakeLists.txt  stereo.vcxproj  stereo.vcxproj.filters
sources/: ComputeDistance.cpp  ComputeDistance.h  Epsilon.h  FieldObject.h  FieldOutput.h  Matrix3D.h  MatrixUtilities.h  SectionsDistanceTest.cpp  SectionsDistanceTest.h  Segment3D.h  TrivialTests.cpp  TrivialTests.h  stereo.cpp
stereo/: FieldObject.h  Matrix3D.h  Point3D.h  Segment3D.h  TrivialTests.cpp  TrivialTests.h  stereo.cpp  stereo.sln  stereo.vcxproj  stereo.vcxproj.filters
